<resources>
    <string name="app_name">MyAppStatistics</string>
    <string name="apply_permission">申请权限</string>
    <string name="show_results">显示应用使用情况</string>
    <string name="start_service">开启服务</string>
    <string name="stop_service">停止服务</string>
    <string name="delete_all">清空数据库</string>
    <string name="usage_text">总体使用情况</string>
    <string name="pie_text">饼图</string>
    <string name="colunm_text">柱状图</string>
    <string name="list_text">应用使用序列</string>
    <string name="start_time">开始时间：</string>
    <string name="duration">持续时间：</string>
    <string name="last_time_used">最后使用时间：</string>
    <string name="open_app_usage_setting">请先授权</string>
    <string name="time_span">最近一</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
