<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/show_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10" />

    <LinearLayout
        android:id="@+id/bottom_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:baselineAligned="true"
        android:layout_gravity="bottom">


        <TextView
            android:id="@+id/usage_text_view"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/usage_text"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/column_text_view"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/colunm_text"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/pie_text_view"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/pie_text"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/list_text_view"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/list_text"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:textSize="12sp" />
        <!--android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"-->

    </LinearLayout>
</LinearLayout>